# OneControl

./: .clang-format  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  Doxyfile  OneControl.sln  README.md  cmake_install.cmake  vcpkg.json
.github/workflows/: cmake.yml  main_ci.yml
OneControl/: CMakeLists.txt  Client.cpp  Client.h  Constants.h  IMouse.cpp  IMouse.h  MouseLinux.cpp  MouseLinux.h  MouseMac.cpp  MouseMac.h  MouseWin.cpp  MouseWin.h  OneControl.cpp  OneControl.h  OneControl.vcxproj  OneControl.vcxproj.filters  RSA.cpp  RSA.h  Server.cpp  Server.h  StaticHelpers.h  Version.cpp  Version.h  cmake_install.cmake  main.cpp
cmake/: GetCPMConfig.cmake
docs/html/: _client_8h_source.html  _constants_8h_source.html  _enums_8h_source.html  _helper_methods_8h_source.html  _input_8h_source.html  _one_control_8h_source.html  _packet_8h_source.html  _runtime_globals_8h_source.html  _server_8h_source.html  _version_8h_source.html  annotated.html  classes.html  classoc_1_1_client-members.html  classoc_1_1_client.html  classoc_1_1_one_control-members.html  classoc_1_1_one_control.html  classoc_1_1_packet-members.html  classoc_1_1_packet.html  classoc_1_1_server-members.html  classoc_1_1_server.html  classoc_1_1_version-members.html  classoc_1_1_version.html  dir_133b3cdd880ca9e91a51b18f00995eeb.html  dir_25af87635f61d97ebff867d1c53b4626.html  dir_60fc5c45e4b504abe376f4eaf55fb069.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_77de3cc35bda327d7cbeb1aabf5b0844.html  dir_a1ca5e95b55670c6e8ff0a0c267793a7.html  dir_b97f89a5ddfb01fa5a117e42e55c19b4.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_f6675a7e1cd1d6d7f6e5e9669ead62e8.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html
docs/latex/: _client_8h_source.tex  (+21 more)
lib/: CMakeLists.txt
lib/include/OneControl/: Client.h  Constants.h  Enums.h  HelperMethods.h  Input.h  KeyboardReceiver.h  KeyboardSender.h  MouseReceiver.h  MouseSender.h  Queue.h  RuntimeGlobals.h  Server.h  Version.h
lib/include/OneControl/Client/: Client.cpp  Client.h
lib/include/OneControl/Input/: Input.cpp  Input.h
lib/include/OneControl/Packet/: Packet.cpp  Packet.h
lib/include/OneControl/Queue/: Queue.cpp  Queue.h
lib/include/OneControl/Receiver/Keyboard/Windows/: KeyboardReceiver.cpp
lib/include/OneControl/Receiver/Mouse/Mac/: MouseReceiver.cpp
lib/include/OneControl/Receiver/Mouse/Windows/: MouseReceiver.cpp
lib/include/OneControl/Sender/Keyboard/: KeyboardSender.h
lib/include/OneControl/Sender/Keyboard/Windows/: KeyboardSender.cpp
lib/include/OneControl/Sender/Mouse/: MouseSender.h
lib/include/OneControl/Sender/Mouse/Mac/: MouseSender.cpp
lib/include/OneControl/Sender/Mouse/Windows/: MouseSender.cpp
lib/include/OneControl/Server/: Server.cpp  Server.h
lib/include/OneControl/Server/Linux/: Server.cpp
lib/include/OneControl/Server/Mac/: Server.cpp
lib/include/OneControl/Server/Windows/: Server.cpp
lib/include/OneControl/Utils/Windows/MessageTimer/: MessageTimer.cpp  MessageTimer.h
lib/include/OneControl/Version/: Version.cpp  Version.h
lib/src/OneControl/Client/: Client.cpp
lib/src/OneControl/Input/: Input.cpp
lib/src/OneControl/Packet/: Packet.cpp
lib/src/OneControl/Queue/: Queue.cpp
lib/src/OneControl/Receiver/Keyboard/Linux/: KeyboardReceiver.cpp
lib/src/OneControl/Receiver/Keyboard/Mac/: KeyboardReceiver.cpp
lib/src/OneControl/Receiver/Keyboard/Windows/: KeyboardReceiver.cpp
lib/src/OneControl/Receiver/Mouse/Linux/: MouseReceiver.cpp
lib/src/OneControl/Receiver/Mouse/Mac/: MouseReceiver.cpp
lib/src/OneControl/Receiver/Mouse/Windows/: MouseReceiver.cpp
lib/src/OneControl/Sender/Keyboard/Linux/: KeyboardSender.cpp
lib/src/OneControl/Sender/Keyboard/Mac/: KeyboardSender.cpp
lib/src/OneControl/Sender/Keyboard/Windows/: KeyboardSender.cpp
lib/src/OneControl/Sender/Mouse/Linux/: MouseSender.cpp
lib/src/OneControl/Sender/Mouse/Mac/: MouseSender.cpp
lib/src/OneControl/Sender/Mouse/Windows/: MouseSender.cpp
lib/src/OneControl/Server/: Server.cpp
lib/src/OneControl/Server/Linux/: Server.cpp
lib/src/OneControl/Server/Mac/: Server.cpp
lib/src/OneControl/Server/Windows/: Server.cpp
lib/src/OneControl/Utils/Windows/MessageTimer/: MessageTimer.cpp
lib/src/OneControl/Version/: Version.cpp
src/: CMakeLists.txt  Client.cpp  Client.h  Enums.h  IMouse.h  Input.cpp  MouseLinux.cpp  MouseLinux.h  MouseMac.cpp  MouseMac.h  MouseWin.cpp  MouseWin.h  OneControl.cpp  OneControl.h  Packet.cpp  Server.cpp  Server.h  StaticHelpers.h  Version.cpp  main.cpp
src/Client/: Client.cpp  Client.h
src/Helpers/: Constants.h  Enums.h  ParsedFlags.h  StaticHelpers.h
src/Input/: Input.cpp
src/Keyboard/: Keyboard.cpp  Keyboard.h
src/Keyboard/Linux/: Keyboard.cpp
src/Keyboard/Mac/: Keyboard.cpp
src/Keyboard/Windows/: Keyboard.cpp
src/KeyboardReceiver/: KeyboardReceiver.h
src/KeyboardReceiver/Linux/: KeyboardReceiver.cpp
src/KeyboardReceiver/Mac/: KeyboardReceiver.cpp
src/KeyboardReceiver/Windows/: KeyboardReceiver.cpp
src/KeyboardSender/: KeyboardSender.cpp  KeyboardSender.h
src/KeyboardSender/Linux/: KeyboardSender.cpp
src/KeyboardSender/Mac/: KeyboardSender.cpp
src/KeyboardSender/Windows/: KeyboardSender.cpp
src/Mouse/: Mouse.cpp  Mouse.h
src/Mouse/Linux/: Mouse.cpp
src/Mouse/Mac/: Mouse.cpp
src/Mouse/Windows/: Mouse.cpp
src/MouseReceiver/: MouseReceiver.h
src/MouseReceiver/Linux/: MouseReceiver.cpp
src/MouseReceiver/Mac/: MouseReceiver.cpp
src/MouseReceiver/Windows/: MouseReceiver.cpp
src/MouseSender/: MouseSender.cpp  MouseSender.h
src/MouseSender/Linux/: MouseSender.cpp
src/MouseSender/Mac/: MouseSender.cpp
src/MouseSender/Windows/: MouseSender.cpp
src/Packet/: Packet.cpp
src/Program/: OneControl.cpp  OneControl.h
src/Server/: Server.cpp  Server.h
src/Server/Linux/: Server.cpp
src/Server/Mac/: Server.cpp
src/Server/Windows/: Server.cpp
src/Version/: Version.cpp  Version.h
src/Windows/MessageTimer/: MessageTimer.cpp  MessageTimer.h
tests/: CMakeLists.txt  ServerTests.cpp  my_test.cc
(+28 files in other folders)
